ui/scss/component/_livestream.scss
/* ... */
.livestream-discussion__header {
  border-bottom: 1px solid var(--color-border);
  padding-bottom: var(--spacing-s);
  margin-bottom: 0;
  align-items: center;

  .recommended-content__toggles {
    button {
      height: unset;
      padding: 5px;
    }

    .button__label {
      max-height: 18px;
    }
  }

  @media (min-width: $breakpoint-small) {
    height: $discussion-header__height;
    padding: 0 var(--spacing-s);
    padding-right: 0;
  }

  @media (max-width: $breakpoint-small) {
    padding: var(--spacing-xxs);
  }
}

.livestream-discussion__title {
  @extend .card__title-section;
  @extend .card__title-section--small;
  display: flex;
  align-items: center;
  padding: 0;

  .menu__button {
    margin-left: var(--spacing-xxs);
  }

  @media (max-width: $breakpoint-small) {
    .menu__button {
      margin-left: 5px;
    }
  }
}

.livestream__comments-wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100vh - var(--header-height) - #{$discussion-header__height} - var(--spacing-l));
  overflow: scroll;
}

.livestream__comments {
  display: flex;
  flex-direction: column-reverse;
  font-size: var(--font-small);
  overflow-y: scroll;
  overflow-x: visible;
  padding-top: var(--spacing-s);
  width: 100%;
  height: 500px;
}

.livestream-comment {
  list-style-type: none;
  position: relative;

  .date_time {
    color: var(--color-text-subtitle);
    opacity: var(--live-timestamp-opacity);
  }

  &:hover {
    .date_time {
      opacity: 0.5;
    }
  }

  @media (min-width: $breakpoint-small) {
    &:hover {
      background-color: rgba(var(--color-primary-dynamic), 0.1);

      .menu__button {
        opacity: 1;
      }

      .comment__author {
        color: var(--color-primary);
      }
    }

    &:not(:hover) {
      .menu__button:not(:focus):not([aria-expanded='true']) {
        opacity: 0;
      }
    }
  }

  .channel-name {
    font-size: var(--font-xsmall);
  }
}

.livestream-comment--mentioned {
  background-color: var(--color-card-background-highlighted);
}

.livestream-comment__info {
  overflow: hidden;
}

.livestream-comment--superchat {
  background-color: rgba(var(--color-primary-dynamic), 0.03);

  + .livestream-comment--superchat {
    margin-bottom: var(--spacing-xxs);
  }

  .livestream-comment__body {
    display: flex;
    align-items: flex-start;
    flex-direction: unset;
    flex: unset;
  }

  .livestream-comment__info {
    margin-top: calc(var(--spacing-xxs) / 2);
  }

  &::before {
    position: absolute;
    left: 0;
    height: 100%;
    max-height: 4rem;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    width: 5px;
    background-color: var(--color-superchat);
    content: '';
  }
}

.livestream-comment__body {
  display: flex;
  align-items: flex-start;
  margin-left: var(--spacing-s);
  overflow: hidden;

  .livestream-comment__info--sticker {
    display: flex;
    margin: var(--spacing-xxs) 0;
  }

  .channel-thumbnail {
    @include handleChannelGif(2rem);
    margin-top: var(--spacing-xxs);
    flex-shrink: 0;
  }
}

.livestream-comment__menu {
  position: absolute;
  right: var(--spacing-xs);
  top: var(--spacing-xs);
}

.livestream__comments__scroll-to-recent {
  margin-top: -$recent-msg-button__height;
  align-self: center;
  margin-bottom: var(--spacing-xs);
  font-size: var(--font-xsmall);
  padding: var(--spacing-xxs) var(--spacing-s);
  opacity: 0.9;

  &:hover {
    opacity: 1;
  }
}

.livestream__comment-create {
  padding: var(--spacing-s);
  border-top: 1px solid var(--color-border);
  margin-top: auto;

  .commentCreate {
    select,
    textarea,
    input {
      background-color: var(--color-header-button);
    }
    .help {
      color: var(--color-text);
    }
    .comment__char-count-mde {
      background-color: var(--color-header-button) !important;
    }
    .button--file-action {
      .icon {
        background-color: var(--color-header-button) !important;
      }
      color: var(--color-text);
    }
    .button--link {
      border-radius: var(--border-radius);
    }

    .section__actions {
      .button--alt,
      .button--link {
        background-color: var(--color-header-button);
      }
    }
  }

  .section {
    margin-top: var(--spacing-s);
  }
}

.livestream__channel-link {
  margin-bottom: var(--spacing-xl);
  box-shadow: 0 0 0 rgba(246, 72, 83, 0.4);
  animation: livePulse 2s infinite;
  padding: var(--spacing-m);

  background: rgba(var(--color-primary-dynamic), 0.1);
  border-radius: var(--border-radius);

  &:hover {
    cursor: pointer;
  }
}

@keyframes livePulse {
  0% {
    box-shadow: 0 0 0 0 rgba(246, 72, 83, 0.4);
  }
  70% {
    box-shadow: 0 0 0 10px rgba(246, 72, 83, 0);
  }
  100% {
    box-shadow: 0 0 0 0 rgba(246, 72, 83, 0);
  }
}

.livestream__publish-checkbox {
  margin: var(--spacing-l) 0;

  .checkbox,
  .radio {
    margin-top: var(--spacing-m);

    label {
      color: #444;
    }
  }
}

.livestream__creator-message {
  background-color: #fde68a;
  padding: var(--spacing-m);
  color: black;
  border-radius: var(--border-radius);

  h4 {
    font-weight: bold;
    font-size: var(--font-small);
    margin-bottom: var(--spacing-s);
  }
}

.livestream__publish-intro {
  margin-top: var(--spacing-l);
}

.livestream__viewer-count {
  display: flex;
  align-items: center;

  .icon {
    margin-left: var(--spacing-xs);
  }
}

.livestream-superchats__wrapper {
  flex-shrink: 0;
  position: relative;
  overflow-x: scroll;
  border-right: var(--spacing-s) solid var(--color-card-background);
  border-bottom: 1px solid var(--color-border);
  font-size: var(--font-small);
  background-color: var(--color-card-background);

  @media (min-width: $breakpoint-small) {
    padding: var(--spacing-xs);
    width: var(--livestream-comments-width);
  }
}
/* ... */

