Fix toggle button background color in livestream chat on mobile

--- a/ui/scss/component/_livestream.scss
+++ b/ui/scss/component/_livestream.scss
@@ -192,6 +192,9 @@ $recent-msg-button__height: 2rem;
 
   @media (max-width: $breakpoint-small) {
     padding: var(--spacing-xxs);
+    .button-toggle {
+      background-color: rgba(var(--color-primary-dynamic), 0.08);
+    }
   }
 }
 
